# SP-GQE

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: EXPERIMENT_PROTOCOL.md  experiment.yaml
deliverables/: SP_GQE_Empirical_Report.docx  SP_GQE_Empirical_Report.md
dissertation/: ADDRESSING_FEEDBACK.md  DISSERTATION_PLAN.md  DISSERTATION_PREVIEW.md  EMPIRICAL_CHAPTER.md  MESSAGE_PROFESSOR.md  notes.txt
results/: AGGREGATED_REPORT.md  AGGREGATED_SUMMARY.json  EXPERIMENT_REPORT.md  GROQ_MULTI_SEED_NOTE.md  run_summary.json
results/daily_runs/: 2026-04-23__seed42__n25.json  2026-04-23__seed42__n25__queries.md  2026-04-23__seed43__n25.json  2026-04-23__seed43__n25__queries.md  2026-04-23__seed44__n25.json  2026-04-23__seed44__n25__queries.md  2026-04-23__seed45__n25.json  2026-04-23__seed45__n25__queries.md  2026-04-23__seed46__n25.json  2026-04-23__seed46__n25__queries.md  2026-04-23__seed47__n25.json  2026-04-23__seed47__n25__queries.md  2026-04-24__seed48__n15.json  2026-04-24__seed48__n15__queries.md  2026-04-24__seed49__n25.json  2026-04-24__seed49__n25__queries.md  2026-04-24__seed50__n25.json  2026-04-24__seed50__n25__queries.md  2026-04-24__seed51__n25.json  2026-04-24__seed51__n25__queries.md  2026-04-24__seed52__n25.json  2026-04-24__seed52__n25__queries.md  2026-04-24__seed53__n25.json  2026-04-24__seed53__n25__queries.md  2026-04-24__seed54__n25.json  2026-04-24__seed54__n25__queries.md  (+20 more)
scripts/: aggregate_daily_runs.py  build_deliverable_docx.py  init_project.ps1  plot_kg_overlay.py  run_experiment.py
(+19 files in other folders)
